kubernetes/project-01-ocp/redis-slave.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
    tier: backend
  namespace: project-01-opc
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: slave
    tier: backend
  type: ClusterIP
